--- a/PartA/homework1.html
+++ b/PartA/homework1.html
@@ -8,11 +8,9 @@
   </head>
   <body class="hw">
 
-    <!--
-     Here you'll add your own DIV tag with your name inside it, and with the id and class
-     attributes set as described in section 5 of this page.
-     -->
+    <div id="studentname" class="namedata">Brock Carter</div>
 
+  
     <div class="container">
       <h1>CSCI E-3 Homework #1</h1>
       <h3 class="whatlearn">What you're learning:</h3>
